# Windows

./: TODO.md  blackbox_mcp_settings.json  package-lock.json  readme.md
.claude/: settings.local.json
CameraControlPython/: README.md  main.py  requirements.txt  run.bat  setup.py
CameraControlPython/edsdk/: __init__.py  camera.py  edsdk_types.py  edsdk_wrapper.py
CameraControlPython/ui/: __init__.py  file_browser.py  live_view_widget.py  main_window.py  settings_panel.py  styles.py
CameraTestApp/: CMakeLists.txt
CameraTestApp/qml/: main.qml  qml.qrc
CameraTestApp/qml/components/: CameraSelector.qml  LiveViewPanel.qml  PropertyInfoRow.qml  PropertyPanel.qml  PropertyRow.qml  ShootingControls.qml  StatusBar.qml
CameraTestApp/src/: main.cpp
CameraTestApp/src/backend/: CameraDevice.cpp  CameraDevice.h  CameraManager.cpp  CameraManager.h  EDSDKHelper.cpp  EDSDKHelper.h  LiveViewImageProvider.h  PropertyHelper.cpp  PropertyHelper.h
EDSDK/Header/: EDSDKTypes.h
PhotoBooth/: BUILD.md  FEATURES.md  HUONG_DAN_TIENG_VIET.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  USER_GUIDE.md
PhotoBooth/Backend/: CMakeLists.txt
PhotoBooth/Backend/EDSDKWrapper/: Camera.cpp  Camera.h
PhotoBooth/Backend/ImageProcessor/: Filter.h  GreenScreen.h  Overlay.h
PhotoBooth/Frontend/PhotoBoothApp/: App.xaml  App.xaml.cs  PhotoBoothApp.csproj
PhotoBooth/Frontend/PhotoBoothApp/Models/: CameraInfo.cs  EventProfile.cs  Template.cs
PhotoBooth/Frontend/PhotoBoothApp/Services/: ICameraService.cs  IImageProcessingService.cs  IPrintService.cs  ISharingService.cs
PhotoBooth/Frontend/PhotoBoothApp/Views/: GuestDisplayWindow.xaml  MainWindow.xaml
photobooth/: PhotoBooth.sln  README.md
photobooth-pro/: .gitignore  ARCHITECTURE.md  CONVERSION-FINAL-REPORT.md  HTML-CONVERSION-COMPLETE.md  HTML-TO-REACT-PLAN.md  PROGRESS.md  QUICK-START.md  README.md  SETUP.md  TESTING-CHECKLIST.md  UI-COMPLETE.md  binding.gyp  command.md  package.json  test_layout_flow.py
photobooth-pro/.gemini/artifacts/: architecture-decision.md  build-issues-solution.md  build-success.md  direct-link-solution.md  electron-migration-plan.md  electron-migration-progress.md  final-status.md  gif-boomerang-video-plan.md  hybrid-final-status.md  hybrid-next-steps.md  liveview-implementation-vi.md  liveview-implementation.md  new-features-guide.md  processmanager-plan.md  processmanager-progress.md  system-logic-analysis_vi.md
photobooth-pro/backend/: CMakeLists.txt  SDK_ANALYSIS.md  TODO.md
photobooth-pro/backend/MultiCamCui/: CMakeLists.txt
photobooth-pro/backend/MultiCamCui/include/: Property.h
photobooth-pro/backend/MultiCamCui/src/: CameraModel.cpp  MultiCamCui.cpp
photobooth-pro/backend/include/api/: HTTPServer.h  WebSocketServer.h
photobooth-pro/backend/include/camera/: CameraManager.h  CanonCamera.h  CanonSDKCamera.h  CanonSDKWrapper.h  ICamera.h  ProcessManager.h  WebcamCamera.h
photobooth-pro/backend/include/core/: Application.h  SharedMemoryManager.h
photobooth-pro/backend/include/image/: ImageProcessor.h  LayoutAnalyzer.h
photobooth-pro/backend/include/media/: BurstCaptureManager.h  GifCreator.h  LayoutAnalyzer.h
photobooth-pro/backend/include/print/: PrintManager.h
photobooth-pro/backend/include/server/: LiveViewServer.h
photobooth-pro/backend/include/storage/: DatabaseManager.h  FileManager.h
photobooth-pro/backend/scripts/: make_single_exe.ps1  package_release.ps1
photobooth-pro/backend/src/: main.cpp
photobooth-pro/backend/src/api/: HTTPServer.cpp  HTTPServerLiveView.cpp  WebSocketServer.cpp
photobooth-pro/backend/src/camera/: CameraManager.cpp  CanonCamera.cpp  CanonSDKCamera.cpp  ProcessManager.cpp  WebcamCamera.cpp
photobooth-pro/backend/src/core/: Application.cpp  SharedMemoryManager.cpp
photobooth-pro/backend/src/image/: LayoutAnalyzer.cpp
photobooth-pro/backend/src/media/: BurstCaptureManager.cpp  GifCreator.cpp  LayoutAnalyzer.cpp
photobooth-pro/backend/src/napi/: camera_module.cpp
photobooth-pro/backend/src/server/: LiveViewServer.cpp
photobooth-pro/backend/src/storage/: DatabaseManager.cpp  FileManager.cpp
photobooth-pro/electron/: main.js  preload.js
photobooth-pro/frontend/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.electron.json
photobooth-pro/frontend/electron/: main.ts  preload.ts
photobooth-pro/frontend/src/: App.tsx  index.css  liveview.worker.ts
photobooth-pro/frontend/src/components/: CameraInfo.tsx  CameraSettings.tsx  CameraSourceSettings.tsx  CaptureControls.tsx  CaptureSettings.tsx  CountdownOverlay.tsx  CreateEventModal.tsx  FilterPanel.tsx  LayoutSettings.tsx  LiveViewCanvas.tsx  LiveViewDisplay.tsx  PhotoStripTray.tsx  QRCodeModal.tsx
photobooth-pro/frontend/src/hooks/: useElectron.ts  useElectronCamera.ts
photobooth-pro/frontend/src/pages/: AttractPage.tsx  CapturePage.tsx  EventsPage.tsx  ModeSelectionPage.tsx  PrintResultPage.tsx  SettingsPage.tsx  SharingPage.tsx  TemplateLibraryPage.tsx
photobooth-pro/frontend/src/services/: api.ts  websocket.ts
photobooth-pro/frontend/src/store/: useAppStore.ts
photobooth-pro/frontend/src/types/: electron.d.ts  index.ts
photobooth-pro/frontend/src/workers/: liveview.worker.ts
photobooth/src/PhotoBooth.Api/: PhotoBooth.Api.csproj  PhotoBooth.Api.http  PhotoBoothApi.cs  Program.cs
photobooth/src/PhotoBooth.Api/Properties/: launchSettings.json
photobooth/src/PhotoBooth.Api/wwwroot/: index.html
photobooth/src/PhotoBooth.Core/: PhotoBooth.Core.csproj  PhotoBoothService.cs  ServiceCollectionExtensions.cs
photobooth/src/PhotoBooth.Core/Cameras/: GPhoto2Camera.cs  ICamera.cs  MockCamera.cs
photobooth/src/PhotoBooth.Core/Imaging/: IImageRenderer.cs  ImageModels.cs  ImageRenderer.cs
photobooth/src/PhotoBooth.Core/Printing/: FilePrinter.cs  IPrinter.cs
photobooth/tests/PhotoBooth.Tests/: PhotoBooth.Tests.csproj  UnitTest1.cs
photobooth/web/: eslint.config.js  package.json  vite.config.ts
photobooth/web/src/app/: App.tsx  (+1 more)
statics/: config.html  home.html  layout.html  liveview.html  mode.html  print.html  qrcode.html
(+15 files in other folders)
